fix: truncate game title beyond 2 lines

--- a/app/components/shared/main-card/main-card.scss
+++ b/app/components/shared/main-card/main-card.scss
@@ -58,7 +58,14 @@
 	justify-content: space-between;
 	border-radius: 4px;
 }
-
+.truncate-two-lines {
+	display: -webkit-box;
+	-webkit-line-clamp: 2;        /* Limit to 2 lines */
+	-webkit-box-orient: vertical;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	word-break: break-word;       /* Allow breaking long words */
+  }
 @media screen and (max-width: 1700px) {
 	.mainCard {
 		width: 250px;
@@ -95,7 +102,7 @@
 @media screen and (max-width: 540px) {
 	.mainCard {
 		width: 175px;
-		height: 225px;
+		height: 260px;
 
 		img {
 			height: 60%;
